--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Product Service</h1>
-        <p>Welcome to the Product Service!</p>
+        <p>Welcome to the Product Service Updated!</p>
         <p>This is a simple web page to demonstrate the product service.</p>
         
       
